--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,14 @@
 plugins {
     id 'java'
-}
-plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
-}
-plugins {
     id "com.github.ben-manes.versions" version "0.42.0"
     // Usage: gradle dependencyUpdates  -Drevision=release
 }
 
+apply plugin: 'application'
+
 group 'ch.bubendorf'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 compileJava {
     sourceCompatibility = 17
@@ -19,9 +17,10 @@ compileJava {
 compileJava.options.encoding = 'UTF-8'
 
 shadowJar {
-//    mainClass = 'ch.bubendorf.gpx2fit.Main'
+    mainClassName = 'ch.bubendorf.gpx2fit.Main'
     manifest {
-        attributes("Implementation-Title": "gpx2fit",
+        attributes(
+                "Implementation-Title": "gpx2fit",
                 "Implementation-Version": archiveVersion.get()
         )
     }
@@ -35,8 +34,6 @@ dependencies {
     implementation 'com.beust:jcommander:1.82'
     implementation 'io.jenetics:jpx:3.0.0'
     implementation 'org.gavaghan:geodesy:1.1.3'
-    //implementation 'xpp3:xpp3_min:1.1.4c'
-    //implementation 'xmlpull:xmlpull:1.1.3.4a'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
